# filmes-top-api

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/blueprints/: api_blueprint.py  auth_blueprint.py  movie_blueprint.py
app/controllers/: __init__.py  auth_controller.py  movie_controller.py
app/dtos/: movie_dto.py  review_dto.py  user_dto.py
app/models/: __init__.py  movie.py  rental.py  review.py  user.py
app/repositories/: __init__.py  movies_repository.py  rental_repository.py  review_repository.py  user_repository.py
app/schemas/movie/: add_review_schema.py  create_movie_schema.py  get_movie_request_schema.py
app/schemas/user/: login_user_schema.py  register_user_schema.py
app/services/: __init__.py  auth_service.py  movie_service.py
app/types/: error.py  model.py
app/utils/: api_docs.py  api_response.py  auth_mixin.py  error_handlers.py  exceptions.py
app/validators/: body_validator.py  query_validator.py
migrations/versions/: 0267369c2c1a_add_genre_field.py  0ca3380f4d67_add_user_model.py  3f28b9b383be_add_movie_informations.py  46b1981e614d_add_movies.py  9268dead5ab5_add_rental_relationships.py  9ab488e1c077_add_review_model.py  a7c0db0c376b_add_review_counts_to_movie.py  dfdf4bdc6b1d_add_name_to_user.py
tests/: conftest.py  test_auth.py  test_movies.py  test_rentals.py  test_review.py
